Bugfix for page visibility layout

--- a/media/boom/css/boom.page.less
+++ b/media/boom/css/boom.page.less
@@ -142,6 +142,10 @@
 		}
 	}
 
+	&-toggle-visible {
+		display: none;
+	}
+
 	&-editbutton {
 		float: right;
 	}
